# dev

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: .env.example
backend/app/infrastructure/database/: db_class.py  db_conn.py
backend/app/infrastructure/fastapi/: main.py
frontend/: Dockerfile.dev  README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
mysql/sqls/: initializer.sql
nginx/: default.conf
