[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["kdh92417 <kdh92417@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.1"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.40"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
